compiler/kernc_cli/tests/soundness/run-pass/mutability/immutable_array_binding_cannot_upgrade_element_mutability.rn
// class: pointer-like-mutability
// exit: 0

fn main() i32 {
    let data = [3]mut u8.{ b'a', b'b', b'c' };
    let view = data..[0 .. 3];

    view.[1] = b'Z';

    if (data.[1] == b'Z') {
        return 0;
    }
    return 1;
}
